# hive-ai-onebrain-proof

./: .gitignore  README.md
.github/workflows/: ci.yml
brain/: __init__.py
brain/io/: artifacts.py  audit.py  probes.py  validators.py
brain/server/: __init__.py  proof_app.py
open_source/phase1/: LICENSE  README.md  SAFETY.md  manifest.json  pyproject.toml  requirements.txt
open_source/phase1/schema/: request.json  response.json
open_source/phase1/tests/: conftest.py  test_proof_app.py
scripts/: export_phase1_proof.py  proof_replay_check.py
